--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
      <!--  <script>
         alert(1);
     </script> -->
-    <script src="./js/script.js"></script>
+    <script src="./js/37.js"></script>
 </body>
 </html>
