--- a/43/index.html
+++ b/43/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body cz-shortcut-listen="true">
     <div class="wrapper">
         <div class="first">
             <button></button>
@@ -24,6 +24,6 @@
         <div class="third"></div>
     </div>
     
-    <script>src="./script.js"</script>
+    <script src="js/script.js"></script>
 </body>
 </html>
