--- a/HTML/one/index.html
+++ b/HTML/one/index.html
@@ -14,6 +14,11 @@
 
 <body>
     <div class="header">
+        <div class="logo-container">
+            <a class="logo-link" href="">
+                <img class="logo-img" src="https://opencages.com.ua/_nuxt/img/logo-light.9a60eb5.svg" alt="logo">
+            </a>
+        </div>
         <ul class="nav-list">
             <li>
                 <a href="">Про нас</a>
