--- a/HTML/one/index.html
+++ b/HTML/one/index.html
@@ -21,25 +21,25 @@
         </div>
         <ul class="nav-list">
             <li>
-                <a href="">Про нас</a>
+                <a class="nav-list-link" href="">Про нас</a>
             </li>
             <li>
-                <a href="">Блог</a>
+                <a class="nav-list-link" href="">Блог</a>
             </li>
             <li>
-                <a href="">Компанії</a>
+                <a class="nav-list-link" href="">Компанії</a>
             </li>
             <li>
-                <a href="">Підтрімати організацію</a>
+                <a class="nav-list-link" href="">Підтрімати організацію</a>
             </li>
             <li>
-                <a href="">Книги</a>
+                <a class="nav-list-link" href="">Книги</a>
             </li>
             <li>
-                <a href="">Для Медіа</a>
+                <a class="nav-list-link" href="">Для Медіа</a>
             </li>
             <li>
-                <a href="">Контакти</a>
+                <a class="nav-list-link" href="">Контакти</a>
             </li>
             <li>
                 <a href="">
