--- a/HTML/горизонтальне центрування/index.html
+++ b/HTML/горизонтальне центрування/index.html
@@ -8,7 +8,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
-    <script src="script.js"></script>
+    <div class="parent">
+        <!-- <h1 class="title">Gritins from Kyiv!!!</h1>
+        <img class="img" src="./img.jpg" alt="animals">
+        <br>
+        <span>Some cool subtitle</span> -->
+        <div class="child"></div>
+        <div class="child"></div>
+        <div class="child"></div>
+        <div class="child"></div>
+        <div class="child"></div>
+    </div>
 </body>
 </html>
