--- a/GoIT/index.html
+++ b/GoIT/index.html
@@ -15,9 +15,9 @@
 <body>
 
     <!--Main-->
-    <div>
+    <div class="main">
         <!--Main content-->
-        <div>
+        <div class="main-content">
             <!--About user-->
             <div class="about">
                 <h4>Front-End Developer</h4>
@@ -116,7 +116,7 @@
             </div>
         </div>
         <!--Sidebar-->
-        <aside>
+        <aside class="sidebar">
             <img src="./img/photo.jpg" alt="user photo">
             <!--Contacts-->
             <div>
