--- a/GoIT/index.html
+++ b/GoIT/index.html
@@ -117,59 +117,61 @@
         </div>
         <!--Sidebar-->
         <aside class="sidebar">
-            <img src="./img/photo.jpg" alt="user photo">
+            <img src="./img/photo.jpg" alt="user photo" class="photo">
             <!--Contacts-->
-            <div>
-                <h2>Contacts</h2>
+            <div class="contacts">
+                <h2 class="sidebar-title">Contacts</h2>
                 <p>
-                    C: <a href="tel:+77777777777">+7 777 777 77 77</a>
+                    <span class="contact-type">C:</span>
+                    <a href="tel:+77777777777" class="contact-link">+7 777 777 77 77</a>
                 </p>
                 <p>
-                    E: <a href="mailto:chornyiav@gmail.com">chornyiav@gmail.com</a>
+                    <span class="contact-type">E:</span>
+                    <a href="mailto:chornyiav@gmail.com" class="contact-link">chornyiav@gmail.com</a>
                 </p>
             </div>
             <!--Tech Skills-->
-            <div>
-                <h2>Tech Skills</h2>
-                <ul>
-                    <li>
-                        HTML5
+            <div class="tech-skills">
+                <h2 class="sidebar-title">Tech Skills</h2>
+                <ul class="tech-skills-list">
+                    <li class="tech-skills-item">
+                        <span class="tech-skills-text">HTML5</span>
                     </li>
-                    <li>
-                        CSS
+                    <li class="tech-skills-item">
+                        <span class="tech-skills-text">CSS</span>
                     </li>
-                    <li>
-                        GIT
+                    <li class="tech-skills-item">
+                        <span class="tech-skills-text">GIT</span>
                     </li>
-                    <li>
-                        WebPack
+                    <li class="tech-skills-item">
+                        <span class="tech-skills-text">WebPack</span>
                     </li>
-                    <li>
-                        JavaScript
+                    <li class="tech-skills-item">
+                        <span class="tech-skills-text">JavaScript</span>
                     </li>
-                    <li>
-                        React.js
+                    <li class="tech-skills-item">
+                        <span class="tech-skills-text">React.js</span>
                     </li>
-                    <li>
-                        Node.js
+                    <li class="tech-skills-item">
+                        <span class="tech-skills-text">Node.js</span>
                     </li>
                 </ul>
             </div>
             <!--Soft Skills-->
-            <div>
-                <h2>Soft Skills</h2>
-                <ul>
-                    <li>
-                        Scrum
+            <div class="soft-skills">
+                <h2 class="sidebar-title">Soft Skills</h2>
+                <ul class="soft-skills-list">
+                    <li class="soft-skills-item">
+                        <span class="soft-skills-text">Scrum</span>
                     </li>
-                    <li>
-                        Agile
+                    <li class="soft-skills-item">
+                        <span class="soft-skills-text">Agile</span>
                     </li>
-                    <li>
-                        GTD
+                    <li class="soft-skills-item">
+                        <span class="soft-skills-text">GTD</span>
                     </li>
-                    <li>
-                        Teamwork
+                    <li class="soft-skills-item">
+                        <span class="soft-skills-text">Teamwork</span>
                     </li>
                 </ul>
             </div>
