--- a/sergiifedorchuk/src/index.html
+++ b/sergiifedorchuk/src/index.html
@@ -35,10 +35,8 @@
             <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
             <button
               type="button"
-              class="btn-close"
-              data-bs-dismiss="modal"
-              aria-label="Close"
-            ></button>
+              class="btn-close" data-bs-dismiss="modal"
+              aria-label="Close"></button>
           </div>
           <div class="modal-body">
             <input
